backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 309276322609.dkr.ecr.ap-southeast-1.amazonaws.com/backend:9
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
